# nouveau

./: .gitignore  CLAUDE.md  Decisions.md  README.md  collection.html  data.py  poetry.py  pyproject.toml  train.py
data/: prepare.py
src/nouveau/: cli.py  generators.py  model.py  poem.py
tests/: conftest.py  test_cli.py  test_generators.py  test_poem.py
