[project]
name = "nouveau"
version = "0.1.0"
description = "Human-AI collaborative poetry generation"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "transformers>=4.40",
    "torch>=2.0",
    "datasets>=2.0",
    "vadersentiment>=3.3.2",
]

[project.scripts]
nouveau = "nouveau.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nouveau"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
